# Courses

./: README.md
edX/Robotic/: README.md
edX/Robotic/Project_1/: CMakeLists.txt
edX/Robotic/Project_2/: CMakeLists.txt  README.md
edX/Robotic/Project_2/scripts/: solutionE2.py
edX/Robotic/Project_4/: README.md
edX/Robotic/Project_4/cartesian_control/scripts/: cartesian_control.py
edX/Robotic/Project_5/: README.md
edX/Robotic/Project_5/motion_planning/scripts/: motion_planning.py
edX/Robotic/Week_1/: README.md  package.xml
edX/Robotic/Week_1/scripts/: solutionE1.py  two_int_talker.py
edX/Robotic/Week_2/: README.md  package.xml
edX/Robotic/Week_3/: README.md
